timetrackerwebapp/src/Components/SignUpOrgPageTwo.css
details ul{
    margin-left:2rem;
}
.signup-org-pagetwo-form{
    display:grid;
    grid-template-columns: repeat(2,auto);
    grid-template-rows:repeat(4,auto);
    gap:1rem;
}
.signup-org-pagetwo-form input{
    display: block;
}
.signup-org-pagetwo-form label{
    font-weight:500;
}
.num-of-employees-section{
    grid-row-start:1;
    grid-column-start:1;
    grid-column-end:3;
    border:solid 1px rgb(121,121,121);
    border-radius: 4px;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    padding: 1rem;
}
.num-of-employees-section{
   
}
.num-of-employees-section input{
    width: 50%;
}
.enter-card-details-container{
    grid-column-start:1;
    grid-row-start:2;
    border:solid 1px rgb(121,121,121);
    border-radius: 4px;
    padding:1rem;
    grid-template-rows:repeat(2, auto);
    grid-template-columns:repeat(2,auto);
    gap:1rem;
}
.card-details-header-container{
    grid-row-start:1;
    grid-column-start:1;
    grid-column-end:3;
    text-align: center;
    margin-bottom: 1rem;
}
.cvv-style-container{
   grid-row-start:3;
}
.signup-card-number-expr{
    display: flex;
    gap:0.5rem;
}

.billing-address-container{
    grid-column-start:2;
    grid-row-start:2;
}
.subtotal-section{
    grid-column-start:2;
    grid-row-start:3;
    padding:1rem;
}
.signup-plan-container{
    text-align:center;
    font-size: 1.1em;
}
.subtotal-section{
    border:solid 1px rgb(121,121,121);
    border-radius: 4px;
    grid-column-start:1;
    grid-column-end:3;
    
}

.subtotal-section{

}
.subtotal-container{
    display: flex;
    justify-content:space-between;
    padding:0.7rem;
    
}
.signup-subtotal-tax-container{
    border-bottom: dotted rgb(121,121,121) 1px;
}
.signup-total-container{
    margin-top:0.5rem;
}



.billing-address-container{
    border:solid 1px rgb(121,121,121);
    border-radius: 4px;
    display:grid;
    grid-template-rows:repeat(5,auto);
    grid-template-columns:repeat(2,auto);
    gap:1rem;
    padding:1.5rem;

}

.billing-header{
    grid-row-start:1;
    grid-column-start:1;
    grid-column-end:3;
    text-align: center;
}
.billing-addresses{
    grid-row-start:2;
    grid-column-start:1;
    grid-column-end:3;
}
.billing-addresses input{
    width: 100%;
}
.billing-state{
    grid-row-start:3;
    grid-column-start:2;
}
.billing-country{
    grid-row-start:3;
    grid-column-start:1;
}
.billing-city{
    grid-row-start:4;
    grid-column-start:1;
}
.billing-zip{
    grid-row-start:4;
    grid-column-start:2;
}


.signup-org-pagetwo-submit-btn{
    grid-row-start:4;
    grid-column-start:1;
    grid-column-end:3;
    display: flex;
    justify-content: center;
}
.signup-org-pagetwo-submit-btn button{
    width:50%;
    padding:1rem;
    font-weight: 600;
}

.signup-org-pagetwo-form > *{
   
    
}

.signup-org-pagetwo-form > * div{
    
}
.org-left-button-container{
    display: flex;
    justify-content: start;
    margin-top:1rem;
}

.signup-org-pagetwo-form > * input{
    padding:0.55rem;
  
    font-weight: 500;
    border-radius: 4px;
    border:1px solid rgb(100,100,100);
    margin:0.2rem 0;
}

